--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.29.1",
     "multer": "^1.4.3",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
